# VEGA_DDP_DEV

./: README.md  environment.yml  pyproject.toml
era5_autoencoder/: Unet_encoder.py  attention_autoencoder.py  autoencoder_run.py  examine_optimised_load_attention_autoencoder.py  load_attention_autoencoder.py  optimised_load_attention_autoencoder.py  seas5_tqdm_autoencoder_run.py  strengthened_autoencoder_run.py  toy_attention.py  tqdm_autoencoder_run.py
main/: BATCH_SIZE_AUTOMATION.py  DASK_MULTI_GPU.py  GPU_HPO_AUTOENCODER.py  HPO_AUTOENCODER.py  MULTI_GPU.py  VALIDATION_HPO_AUTOENCODER.py  added_logging_autoencoder.py  best_model.pth  dask_loading_before_training.py  start_from_VALIDATION_HPO_AUTOENCODER.py  trial_early_stopping.py
main/.ipynb_checkpoints/: AUTOENCODER_TESTING-checkpoint.py
models/: best_model_by_3_optim.pth  best_model_ssrd.pth  best_model_t2m.pth  best_model_tp.pth
scripts/: ddp_test.sh
tests/: ddp_test.py  test_gpus_in_node.py  torchrun_test.py
